--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,9 @@ nav ul li {
 
 
 /* Navbar Desktop Styles */
+nav {
 
+}
 @media (min-width:768px) {
     nav {
         padding: 0px 40px;
@@ -64,6 +66,9 @@ nav ul li {
         max-width: 500px;
         width: 100%;
         justify-content: space-between;
+    }
+    #hamburger {
+        display: none;
     }
 }
 
@@ -96,13 +101,17 @@ article {
 
 /*video styles*/
 .section {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    position: absolute;
+    top: 50%;
+    bottom:0;
+    right: 0;
+    left: 50%;
+    height: auto;
+    width: auto;
+    min-width:100%;
+    min-height: 100%;
+    overflow: hidden;
+
 }
 
 
