--- a/css/style.css
+++ b/css/style.css
@@ -80,17 +80,18 @@ nav {
 h1 {
     font-size: 30px;
     padding: 50px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     
 }
 
 .center {
-    margin: auto;
-    width: 50%;
-    padding: 10px;
+    position: relative;
+    text-align: center;
 }
-.graph {
-    z-index: -1;
-}
+
 /*article styles*/
 article {
     max-width: 900px;
