--- a/css/style.css
+++ b/css/style.css
@@ -79,19 +79,18 @@ nav {
 /*header styles*/
 h1 {
     font-size: 30px;
-    padding: 50px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    
 }
 
 .center {
     position: relative;
     text-align: center;
 }
-
+.centered-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
 /*article styles*/
 article {
     max-width: 900px;
@@ -99,18 +98,13 @@ article {
 /*image styles*/
 
 /*video styles*/
-.section {
-    position: absolute;
-    top: 50%;
-    bottom:0;
-    right: 0;
-    left: 50%;
-    height: auto;
-    width: auto;
-    min-width:100%;
-    min-height: 100%;
-    overflow: hidden;
-
+.video-bg {
+ width: 100%;
+ height: 100vh;
+ overflow: hidden;
+ display: flex;
+ justify-content: center;
+ align-items: center;
 }
 
 
