--- a/css/style.css
+++ b/css/style.css
@@ -11,70 +11,69 @@ nav {
     align-items: center;
 }
 
-nav > a > img {
-    height: 70px;
+nav img {
+    height: 90px;
     width: auto;
-}
-nav ul {
-    list-style-type: none;
-    padding: 0px;
-    margin: 0px;
-    display: none;
-    width: 100%;
-    height: 100vh;
-    background: white;
-    position: fixed;
-    top: 0px;
-    left: 0px;
-    padding: 20px;
-    box-sizing: border-box;
-     z-index: 2;
-
-}
-nav ul.active {
-    display: block;
 }
 nav ul li a {
     text-decoration: none;
-    color:black;
-    font-weight: bold;
+    color: black;
+    font-weight: 600;
 }
-nav ul li {
+nav ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0px;
+    width: 100%;
+    background: white;
+    top: 0px;
     padding: 20px;
+    box-sizing: border-box;
+     z-index: 2;
 }
-#hamburger {
-    display: block;
-    height: 30px;
-    float: right;
+#homepage {
+top: 200px;
+align-items: unset;
 }
-
-
-
 
 /* Navbar Desktop Styles */
 
 @media (min-width:768px) {
     nav {
-        padding: 0px 40px;
+        padding: 0 40px;
     }
     nav ul {
         display: flex;
-        max-width: 500px;
+        max-width: 600px;
         width: 100%;
         justify-content: space-between;
-    }
-    #hamburger {
-        display: none;
     }
 }
 
 
 /*Navbar Mobile Styles*/
-@media (max-width: 767px){
-nav {
-    padding: 0px 20px;
+@media (max-width:767px) {
+    nav {
+        padding: 0 20px;
+    }
+nav ul {
+    max-width: 40vw;
+    width: 100%;
+    height: 100vh;
+    background:#FD9D00 ;
+    position:fixed;
+    top: 0;
+    left: 0;
+    padding: 20px;
+    box-sizing: border-box;
+    
+
 }
+    nav ul li {
+        padding: 20px;
+    }
 }
+
 
 /*header styles*/
 h1 {
@@ -86,6 +85,7 @@ h1 {
    margin-left: auto;
    margin-right: auto;
    width: 50%;
+   padding: 70px;
 }
 
 /*article styles*/
