--- a/css/style.css
+++ b/css/style.css
@@ -32,8 +32,16 @@ nav ul {
      z-index: 2;
 }
 #homepage {
-top: 200px;
+top: 250px;
 align-items: unset;
+}
+
+#hamburger {
+    display: none;
+}
+
+#overlay {
+    display:none ;
 }
 
 /* Navbar Desktop Styles */
@@ -57,7 +65,8 @@ align-items: unset;
         padding: 0 20px;
     }
 nav ul {
-    max-width: 40vw;
+    display: none;
+    max-width: 50vw;
     width: 100%;
     height: 100vh;
     background:#FD9D00 ;
@@ -66,8 +75,34 @@ nav ul {
     left: 0;
     padding: 20px;
     box-sizing: border-box;
-    
+    z-index: 2;
+}
 
+nav ul.active {
+    display: block;
+}
+
+#hamburger {
+    display: block;
+    height: 30px;
+    width: auto;
+}
+#overlay {
+    display: none;
+    width: 100vw;
+    height: 100vh;
+    background:#FD9D00;
+    opacity: 0.3;
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 1;
+
+}
+#overlay.active {
+    display: block;
 }
     nav ul li {
         padding: 20px;
