--- a/css/style.css
+++ b/css/style.css
@@ -142,6 +142,9 @@ article >img {
     font-size: 20px;
     text-align: center;
 }
+.orange {
+    color: #FD9D00;
+}
 /*image styles*/
 
 /*video styles*/
