--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 /*global styles*/
 html, body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin: 0;
 }
 
 /*navbar styles*/
@@ -149,7 +150,7 @@ article >img {
 
 /*video styles*/
 .video-bg {
- width: 100vh;
+ width: 100vw;
  height: 100vh;
  overflow: hidden;
  display: flex;
