--- a/css/style.css
+++ b/css/style.css
@@ -158,6 +158,42 @@ article >img {
  align-items: center;
 }
 
+/*faq styles*/
+.accordion {
+    background-color:#FD9D00 ;
+    color: white;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    text-align: left;
+    border: none;
+    outline: none;
+    transition: 0.4s;
+}
+
+.active,.accordion:hover {
+    background-color: #ff6000;
+}
+.panel {
+    padding: 0 18px;
+    background-color: white;
+    max-height: 0;
+    display: none;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+}
+
+.accordion:after {
+    content: '\02795';
+    font-size: 13px;
+    color: white;
+    float: right;
+    margin-left: 5px;
+}
+
+.active:after {
+    content: "\2796";
+}
 
 
 
