--- a/css/style.css
+++ b/css/style.css
@@ -33,8 +33,7 @@ nav ul {
      z-index: 2;
 }
 #homepage {
-top: 400px;
-overflow: hidden;
+top: 100px;
 }
 
 #hamburger {
@@ -126,23 +125,25 @@ h1 {
    padding: 70px;
 }
 
+.credits {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 40%;
+    padding: 70px;
+}
+@media (max-width:767px) {
+    .center {
+        padding: 0;
+    }
+
+}
 /*article styles*/
 article {
-    margin-left: 70px;
-    margin-right: 400px;
+    margin-left: 200px;
+    margin-right: 300px;
 }
-.left-in {
-    text-align: left;
-    margin-left: 900px;
-    margin-right: 20px;
-    padding: 20px;
-}
-.left-align {
-    text-align: left;
-    max-width: 900px;
-    margin-right: 20px;
-    padding: 20px;
-}
+
 article >img {
     width:30%;
     float: right;
@@ -158,21 +159,46 @@ article >img {
     color: #FD9D00;
     font-size: 19px;
 }
-/*image styles*/
 
-/*video styles*/
+h4 {
+ color: #7D0000;
+}
+
+ /*mobile styles*/
+ @media (max-width:768px) {
+     article {
+         margin-left: 10px;
+     }
+     
+     .humans {
+        width: 400px;
+        height: auto;
+     }
+  
+}   
+/*image styles*/
+.humans {
+   width: 700px;
+   margin: 0;
+}
+
+/*video styles*/ 
 .video-bg {
- width: 100vw;
- height: 97vh;
+ max-width: 100%;
+ height: auto;
+ object-fit: cover;
  overflow: hidden;
  display: flex;
  justify-content: center;
  align-items: center;
- z-index: -1;
+} 
+
+iframe {
+    width: 700px;
+    height: 400px;
+    margin: 0 auto;
+    display: block;
 }
-
-
-
 /*faq styles*/
 .accordion {
     background-color:#FD9D00 ;
@@ -210,6 +236,12 @@ article >img {
     content: "\2796";
 }
 
-
+.footer {
+    background-color: black;
+    color: #ffffff;
+    text-align: center;
+    font-size: 12px;
+    padding:15px;
+}
 
 
