--- a/css/style.css
+++ b/css/style.css
@@ -214,7 +214,7 @@ iframe {
 }
 
 .active,.accordion:hover {
-    background-color: #ff6000;
+    background-color: #D98700;
 }
 .panel {
     padding: 0 18px;
@@ -235,6 +235,11 @@ iframe {
 
 .active:after {
     content: "\2796";
+}
+
+.panel > img {
+    width: 50%;
+
 }
 
 .footer {
