--- a/css/style.css
+++ b/css/style.css
@@ -33,8 +33,8 @@ nav ul {
      z-index: 2;
 }
 #homepage {
-top: 100px;
-}
+    height: 70px;
+    }
 
 #hamburger {
     display: none;
@@ -154,6 +154,8 @@ article >img {
 .center-lines {
     font-size: 20px;
     text-align: center;
+    margin-left: 300px;
+    margin-right: 300px;
 }
 .orange {
     color: #FD9D00;
@@ -186,7 +188,7 @@ h4 {
 /*video styles*/ 
 .video-bg {
  max-width: 100%;
- height: auto;
+ height: 100vh;
  object-fit: cover;
  overflow: hidden;
  display: flex;
@@ -251,5 +253,6 @@ iframe {
 }
 
 video {
+    margin: 0;
     width: 100%;
 }
