--- a/css/style.css
+++ b/css/style.css
@@ -157,6 +157,13 @@ article >img {
     margin-left: 300px;
     margin-right: 300px;
 }
+@media (max-width: 767px) {
+    .center-lines {
+        margin-left: 10px;
+    margin-right: 10px;
+    font-size: 16px;
+    } 
+}
 .orange {
     color: #FD9D00;
     font-size: 19px;
@@ -188,7 +195,7 @@ h4 {
 /*video styles*/ 
 .video-bg {
  max-width: 100%;
- height: 100vh;
+ height: auto;
  object-fit: cover;
  overflow: hidden;
  display: flex;
